レシピ243 既存のクッキーを取得したい

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   <title>ch9</title>
 </head>
 <body>
-    <script src="js/cookie_set.js"></script>
+    <script src="js/cookie_get.js"></script>
 </body>
 </html>
