レシピ244 ブラウザに大きなデータを保存したい

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <title>ch9</title>
 </head>
 <body>
-    <script src="js/cookie_get.js"></script>
+    <div>greet1: <span id="result1"></span></div>
+    <div>greet2: <span id="result2"></span></div>
+    <div>greet3: <span id="result3"></span></div>
+    <script src="js/storage.js"></script>
 </body>
 </html>
