--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <title>ch9</title>
 </head>
 <body>
-    <div>greet1: <span id="result1"></span></div>
-    <div>greet2: <span id="result2"></span></div>
-    <div>greet3: <span id="result3"></span></div>
-    <script src="js/storage.js"></script>
+    <div>氏名: <span id="result1"></span></div>
+    <div>年齢: <span id="result2"></span></div>
+    <div>職業: <span id="result3"></span></div>
+    <script src="js/storage_obj.js"></script>
 </body>
 </html>
